--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Call of Blox - Sitio Oficial</title>
-  <meta name="description" content="Call of Blox: shooter multijugador al estilo arcade en el universo de bloques. Descargá el juego, mirá el tráiler y unite a la comunidad." />
+  <meta name="description" content="Call of Blox - Sitio Oficial" />
   <meta name="theme-color" content="#0f172a" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
