--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <section id="comunidad" class="container">
       <div class="section-title">
-        <h2>Link al juego & Roadmap</h2>
+        <h2>Link al juego & Novedades</h2>
         <span class="notice">Unite al juego y mirá lo que va a pasar en el juego en los proximos meses</span>
       </div>
       <div class="grid-2">
@@ -191,13 +191,11 @@
           </div>
         </div>
         <div class="card">
-          <h3>Roadmap</h3>
+          <h3>Novedades de la ultima actualizacion</h3>
           <ul class="notice">
-            <li>Septiembre: Se espera llegar a 400 visitas, si es asi, se lanzará una actualizacion especial.</li>
-            <li>Octubre: Nueva pantalla de inicio.</li>
-            <li>Noviembre: Servidores privado para jugar con amigos.</li>
+            <li>1.1.4: Nueva pantalla de carga y función de anuncios globales para próximos eventos.</li>
           </ul>
-          <p class="notice">Transparencia total: lo que prometemos, lo construimos.</p>
+          <p class="notice">Esto es lo que se agrego al juego en la ultima actualizacion.</p>
         </div>
       </div>
     </section>
