--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="card">
           <h3>Novedades de la ultima actualizacion</h3>
           <ul class="notice">
-            <li>1.1.4: Nueva pantalla de carga y función de anuncios globales para próximos eventos.</li>
+            <li>1.1.4: Nueva pantalla de inicio y función de anuncios globales para próximos eventos.</li>
           </ul>
           <p class="notice">Esto es lo que se agrego al juego en la ultima actualizacion.</p>
         </div>
