--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <section id="comunidad" class="container">
       <div class="section-title">
         <h2>Link al juego & Novedades</h2>
-        <span class="notice">Unite al juego y mirá lo que va a pasar en el juego en los proximos meses</span>
+        <span class="notice">Unite al juego y mirá lo trajo la nueva actualización</span>
       </div>
       <div class="grid-2">
         <div class="card">
