--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="card">
           <h3>Novedades de la ultima actualizacion</h3>
           <ul class="notice">
-            <li>1.1.6: Se agrego una tabla de jugadores que mas jugaron el juego, una sección llamada "También:" donde hay mas objetos disponibles para equiparse y compatibilidad con servidores privados.</li>
+            <li>1.1.7: Se eliminó la pantalla de carga. Se agregó el número de versión en Ajustes.</li>
           </ul>
           <p class="notice">Esto es lo que se agrego al juego en la ultima actualizacion.</p>
         </div>
